Nullying country attribute in user registration
